--- a/hr_app_project/hr_app/templates/hr_app/base.html
+++ b/hr_app_project/hr_app/templates/hr_app/base.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-    <div class="d-flex flex-column flex-shrink-0 p-3 text-bg-dark" style="width: 280px; height: 100%;">
+    <div class="d-flex flex-column flex-shrink-0 p-3 text-bg-dark" style="width: 20%; height: 100%;">
         <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
           <img src="{% static 'Kartek logo.png' %}" alt="Kartek logo" width="40px" height="32px" style="margin-right: 5px;">
           <span class="fs-4">HR App</span>
@@ -25,19 +25,19 @@
           </li>
           <li>
             <a href="#" class="nav-link text-white">
-              <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#speedometer2"/></svg>
+              <img src="{% static 'recruitment.png' %}" class="bi pe-none me-2" width="16" height="16"></img>
               Recruitment
             </a>
           </li>
           <li>
             <a href="#" class="nav-link text-white">
-              <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#table"/></svg>
+              <img src="{% static 'salary.png' %}" class="bi pe-none me-2" width="16" height="16"></img>
               Payroll
             </a>
           </li>
           <li>
             <a href="#" class="nav-link text-white">
-              <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#grid"/></svg>
+              <img src="{% static 'schedule.png' %}" class="bi pe-none me-2" width="16" height="16"></img>
               Schedule
             </a>
           </li>
@@ -55,5 +55,14 @@
           </ul>
         </div>
       </div>
+      <nav class="navbar fixed-top navbar-dark bg-dark" style="width: 80%; align-self: flex-start; margin-left: 20%;">
+        <div class="container-fluid">
+          <a class="navbar-brand"></a>
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
+        </div>
+      </nav>
 </body>
 </html>
