--- a/hr_app_project/hr_app/templates/hr_app/base.html
+++ b/hr_app_project/hr_app/templates/hr_app/base.html
@@ -60,7 +60,8 @@
           <a class="navbar-brand"></a>
           <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
+            <button class="btn btn-outline-success" type="submit" style="margin-right: 10px;"> Search</button>
+            <button class="btn btn-outline-success" type="submit">Export</button>
           </form>
         </div>
       </nav>
