--- a/hr_app_project/hr_app/templates/base.html
+++ b/hr_app_project/hr_app/templates/base.html
@@ -7,7 +7,7 @@
     <title>HR App</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>    
-
+    <link rel="stylesheet" href="{% static 'header.css' %}">
 </head>
 <body>
     <div class="d-flex flex-column flex-shrink-0 p-3 text-bg-dark" style="width: 20%; height: 100%;">
@@ -18,7 +18,7 @@
         <hr>
         <ul class="nav nav-pills flex-column mb-auto">
           <li class="nav-item">
-            <a href="#" class="nav-link active" aria-current="page">
+            <a href="{% url 'hr_app:addemployee' %}" class="nav-link active" aria-current="page">
               <img src="{% static 'employees.png' %}" class="bi pe-none me-2" width="16" height="16"></img>
               Employee
             </a>
@@ -55,7 +55,7 @@
           </ul>
         </div>
       </div>
-      <nav class="navbar fixed-top navbar-dark bg-dark" style="width: 80%; align-self: flex-start; margin-left: 20%;">
+      <nav class="navbar fixed-top navbar-dark bg-dark" style="width: 80%; margin-left: 20%;">
         <div class="container-fluid">
           <a class="navbar-brand"></a>
           <form class="d-flex" role="search">
@@ -65,5 +65,7 @@
           </form>
         </div>
       </nav>
+      {% block content %}
+      {% endblock %}
 </body>
 </html>
