--- a/hr_app_project/hr_app/templates/newemployee.html
+++ b/hr_app_project/hr_app/templates/newemployee.html
@@ -93,6 +93,11 @@
         <br>
         {{ form.department}}
         <br><br>
+        {{ form.absence.errors}}
+        <label for="{{ form.absence.id_for_label }}">Departman:</label>
+        <br>
+        {{ form.absence}}
+        <br><br>
     </fieldset>
 
     <button class="btn btn-primary" type="submit">Kaydet</button>
