manageemployee almost completed

--- a/hr_app_project/hr_app/templates/editemployee.html
+++ b/hr_app_project/hr_app/templates/editemployee.html
@@ -114,7 +114,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        Are you sure you want to add that employee?
+        Are you sure you want to save your changes?
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">No</button>
@@ -137,4 +137,5 @@
     document.getElementById('myForm').submit(); // Formu gönder
   });
 </script>
+
 {% endblock %}
