--- a/hr_app_project/hr_app/templates/base.html
+++ b/hr_app_project/hr_app/templates/base.html
@@ -8,8 +8,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>    
     <link rel="stylesheet" href="{% static 'header.css' %}">
+
 </head>
-<body>
+<body class="bg-dark">
     <div class="d-flex flex-column flex-shrink-0 p-3 text-bg-dark" style="width: 20%; height: 100%;">
         <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
           <img src="{% static 'Kartek logo.png' %}" alt="Kartek logo" width="40px" height="32px" style="margin-right: 5px;">
@@ -18,7 +19,7 @@
         <hr>
         <ul class="nav nav-pills flex-column mb-auto">
           <li class="nav-item">
-            <a href="{% url 'hr_app:addemployee' %}" class="nav-link active" aria-current="page">
+            <a href="{% url 'hr_app:manageemployee' %}" class="nav-link active" aria-current="page">
               <img src="{% static 'employees.png' %}" class="bi pe-none me-2" width="16" height="16"></img>
               Employee
             </a>
@@ -61,7 +62,6 @@
           <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success" type="submit" style="margin-right: 10px;"> Search</button>
-            <button class="btn btn-outline-success" type="submit">Export</button>
           </form>
         </div>
       </nav>
