--- a/hr_app_project/hr_app/templates/newemployee.html
+++ b/hr_app_project/hr_app/templates/newemployee.html
@@ -126,7 +126,7 @@
   <div class="modal-dialog">
     <div class="modal-content bg-dark text-white">
       <div class="modal-header">
-        <h5 class="modal-title" id="confirmationModalLabel">Confirm Edit</h5>
+        <h5 class="modal-title" id="confirmationModalLabel">Confirm Employee</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
