--- a/hr_app_project/hr_app/templates/jobs.html
+++ b/hr_app_project/hr_app/templates/jobs.html
@@ -5,22 +5,22 @@
 
 <nav class=" nav nav-pills navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark" style="color: azure;
 padding: 10px;">
-    <a href="{% url 'hr_app:manageemployee' %}" class="nav-link active" aria-current="page"> Open Jobs</a>
-    <a href="" class="nav-link"> Candidates</a>  
+    <a href="{% url 'hr_app:jobs' %}" class="nav-link active" aria-current="page"> Open Jobs</a>
+    <a href="{% url 'hr_app:candidates' %}" class="nav-link"> Candidates</a>  
   </nav>
 
   <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark" style="padding: 10px; color: azure;">
-    <h1 style="margin-right: 48%;"> Open Jobs</h1>
+    <h1 style="margin-right: 63%;"> Open Jobs</h1>
         <!-- Button trigger modal -->
     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" style="margin-right:10px;">
       Filters
     </button>
-    <a class="btn btn-primary" href="{% url 'hr_app:addemployee' %}" role="button" style="margin-right: 10px;">Add New Job</a>
+    <a class="btn btn-primary" href="{% url 'hr_app:addjob' %}" role="button" style="margin-right: 10px;">Add New Job</a>
     <a class="btn btn-primary" href="{% url 'hr_app:export_excel_employee' %}" role="button">Export</a>
   </nav>
 
-  <div class="container">
-    <div class="row row-cols-3">
+  <div class="container" style="margin-top: 10px;">
+    <div class="row row-cols-4">
         {% for job in jobs  %}
       <div class="col">
 
@@ -28,9 +28,9 @@ padding: 10px;">
             <div class="card-body">
               <h5 class="card-title"> {{job.job_title}} </h5>
               <h6 class="card-subtitle mb-2 text-body-secondary">Active Until: {{job.active_until}} </h6>
-              <p class="card-text">{{job.department}}</p>
-              <p class="card-text">{{job.contract_type}}</p>
-              <p class="card-text">{{job.location}}</p>
+              <p class="card-text"> <b>Department:</b> {{job.department}}</p>
+              <p class="card-text"> <b>Contract Type:</b> {{job.contract_type}}</p>
+              <p class="card-text"> <b>Location:</b> {{job.location}}</p>
               <a href="#" class="btn btn-primary" role="button">Details</a>
               <a href="#" class="btn btn-primary" role="button">Edit</a>
               <a href="#" class="btn btn-danger" role="button">Delete</a>
