--- a/hr_app_project/hr_app/templates/editjob.html
+++ b/hr_app_project/hr_app/templates/editjob.html
@@ -9,7 +9,7 @@
     
     <!-- İş Detayları -->
     <fieldset>
-        <legend><h2>Add New Job</h2></legend>
+        <legend><h2>Edit Job</h2></legend>
         <hr>
         {{ form.job_title.errors }}
         <label for="{{ form.job_title.id_for_label }}" style="font-weight: bold;font-size:18px;">Job Title:</label>
@@ -81,11 +81,11 @@
   <div class="modal-dialog">
     <div class="modal-content bg-dark text-white">
       <div class="modal-header">
-        <h5 class="modal-title" id="confirmationModalLabel">Confirm Job</h5>
+        <h5 class="modal-title" id="confirmationModalLabel">Confirm Edit</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        Are you sure you want to add that job?
+        Are you sure you want to save your changes?
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">No</button>
