--- a/hr_app_project/hr_app/templates/payroll.html
+++ b/hr_app_project/hr_app/templates/payroll.html
@@ -5,18 +5,16 @@
 
 <nav class=" nav nav-pills navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark" style="color: azure;
 padding: 10px;">
-    <a href="{% url 'hr_app:jobs' %}" class="nav-link active" aria-current="page"> Open Jobs</a>
-    <a href="{% url 'hr_app:candidates'%}" class="nav-link"> Candidates</a>  
+    <a href="" class="nav-link active" aria-current="page"> Payroll</a> 
   </nav>
 
   <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark" style="padding: 10px; color: azure;">
-    <h1 style="margin-right: 63%;"> Open Jobs</h1>
+    <h1 style="margin-right: 63%;"> Payroll</h1>
         <!-- Button trigger modal -->
     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" style="margin-right:10px;">
       Filters
     </button>
-    <a class="btn btn-primary" href="{% url 'hr_app:addjob' %}" role="button" style="margin-right: 10px;">Add New Job</a>
-    <a class="btn btn-primary" href="{% url 'hr_app:export_excel_job'%}" role="button">Export</a>
+    <a class="btn btn-primary" href="" role="button">Export</a>
   </nav>
 
   <div class="container" style="margin-top: 10px; overflow-y: auto;">
