--- a/hr_app_project/hr_app/templates/payroll.html
+++ b/hr_app_project/hr_app/templates/payroll.html
@@ -1,64 +1,84 @@
 {% extends "base.html" %}
 {% block content %}
 
-<div class="container fixed-top " style="max-height: 80vh; overflow-y: auto; margin-left: 20%; margin-top: 4%;">
+<div class="container fixed-top " style="max-height: 80vh; overflow-y: auto; margin-left: 20%; margin-top: 4%;width:auto">
 
-<nav class=" nav nav-pills navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark" style="color: azure;
+  <nav class=" nav nav-pills navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark" style="color: azure;
 padding: 10px;">
-    <a href="" class="nav-link active" aria-current="page"> Payroll</a> 
   </nav>
 
   <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark" style="padding: 10px; color: azure;">
-    <h1 style="margin-right: 63%;"> Payroll</h1>
-        <!-- Button trigger modal -->
-    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" style="margin-right:10px;">
+    <h1 style="margin-right: 67%;"> Payroll</h1>
+    <!-- Button trigger modal -->
+    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal"
+      style="margin-right:10px;">
       Filters
     </button>
     <a class="btn btn-primary" href="" role="button">Export</a>
   </nav>
 
   <div class="container" style="margin-top: 10px; overflow-y: auto;">
-    <div class="row row-cols-4">
-        {% for job in jobs  %}
-      <div class="col">
-
-        <div class="card" style="width: 18rem;">
-            <div class="card-body">
-              <h5 class="card-title"> {{job.job_title}} </h5>
-              <h6 class="card-subtitle mb-2 text-body-secondary">Active Until: {{job.active_until}} </h6>
-              <p class="card-text"> <b>Department:</b> {{job.department}}</p>
-              <p class="card-text"> <b>Contract Type:</b> {{job.contract_type}}</p>
-              <p class="card-text"> <b>Location:</b> {{job.location}}</p>
-              <a href="{% url 'hr_app:jobdetails' job.id %}" class="btn btn-primary" role="button">Details</a>
-              <a href="{% url 'hr_app:edit_job' job.id %}" class="btn btn-primary" role="button">Edit</a>
-              <a href="{% url 'hr_app:deletejob' job.id %}" class="btn btn-danger" role="button">Delete</a>
+    <div class="accordion bg-dark" id="accordionExample">
+      {% for employee in employees %}
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+                aria-expanded="true" aria-controls="collapseOne">
+                {{employee.name}}
+              </button>
+            </h2>
+            <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                <table class="table">
+                  <thead>
+                    <tr>
+                      <th scope="col"> Month</th>
+                      <th scope="col"> Salary</th>
+                      <th scope="col"> Status</th>
+                      <th scope="col"> </th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                        {% for salary in employee.salaries.all %}
+                          <tr>
+                              <td> {{salary.month}} </td>
+                              <td> {{employee.salary}} </td>
+                              <td> {{salary.status}} </td>
+                              <td> 
+                                <a class="btn btn-primary" href="{% url 'hr_app:update_salary' employee.id %}" role="button">Add</a>
+                                <a class="btn btn-primary" href="{% url 'hr_app:update_salary' employee.id %}" role="button">Edit</a>
+                                <a class="btn btn-danger" href="{% url 'hr_app:update_salary' employee.id %}" role="button">Delete</a>
+                              </td>
+                          </tr>
+                        {% endfor %}
+                  </tbody>
+                </table>
+              </div>
             </div>
           </div>
-
-      </div>
-        {% endfor %}
+      {% endfor %}
     </div>
   </div>
-</div>
 
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">Filters</h1>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="filterButton2"></button>
-      </div>
-      <div class="modal-body">
-        <form method="get" action="{% url 'hr_app:jobfilter' %}">
-          <input type="text" placeholder="Job Title" name="job_title" value="{{name_filter}}"><br><br>
-          <input type="text" placeholder="Department" name="department" value="{{department_filter}}"><br><br>
-          <button type="submit" class="btn btn-primary" >Apply Filters</button>
-          <a class="btn btn-secondary" href="{% url 'hr_app:jobs' %}" role="button">Clear Filters</a>
-        </form>
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Filters</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"
+            id="filterButton2"></button>
+        </div>
+        <div class="modal-body">
+          <form method="get" action="{% url 'hr_app:jobfilter' %}">
+            <input type="text" placeholder="Job Title" name="job_title" value="{{name_filter}}"><br><br>
+            <input type="text" placeholder="Department" name="department" value="{{department_filter}}"><br><br>
+            <button type="submit" class="btn btn-primary">Apply Filters</button>
+            <a class="btn btn-secondary" href="{% url 'hr_app:jobs' %}" role="button">Clear Filters</a>
+          </form>
+        </div>
       </div>
     </div>
   </div>
-</div>
 
-{% endblock %}
+  {% endblock %}
