--- a/hr_app_project/hr_app/templates/editsalary.html
+++ b/hr_app_project/hr_app/templates/editsalary.html
@@ -31,6 +31,8 @@
     Submit
    </button>
    <br><br>
+  </form>
+</div>
 
 <!-- Modal -->
 <div class="modal fade" id="confirmationModal" tabindex="-1" aria-labelledby="confirmationModalLabel" aria-hidden="true">
