--- a/hr_app_project/hr_app/templates/newemployee.html
+++ b/hr_app_project/hr_app/templates/newemployee.html
@@ -16,6 +16,11 @@
         <br><br>
         {{ form.photo}}
         <br><br>
+        {{ form.username.errors }}
+        <label for="{{ form.username.id_for_label }}">Username:</label>
+        <br>
+        {{ form.username }}
+        <br><br>
         {{ form.name.errors }}
         <label for="{{ form.name.id_for_label }}">Name:</label>
         <br>
