--- a/hr_app_project/hr_app/templates/timeoffemployee.html
+++ b/hr_app_project/hr_app/templates/timeoffemployee.html
@@ -57,12 +57,13 @@
 
         <nav class=" nav nav-pills navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark" style="color: azure;
         padding: 10px;">
-            <a href="{% url 'hr_app:homeemployee' %}" class="nav-link active" aria-current="page"> General Info </a>
-            <a href="{% url 'hr_app:timeoffemployee' %}" class="nav-link"> Request Time-Off</a>  
+            <a href="{% url 'hr_app:homeemployee' %}" class="nav-link" aria-current="page"> General Info </a>
+            <a href="{% url 'hr_app:timeoffemployee' %}" class="nav-link active"> Request Time-Off</a>  
           </nav>
         
           <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark" style="padding: 10px; color: azure;">
-            <h1 style="margin-right: 63%;"> Welcome {{employee.name}} </h1>
+            <h1 style="margin-right: auto;"> Welcome {{employee.name}} </h1>
+            <a class="btn btn-primary" href="{% url 'hr_app:add_leave_request' %}" role="button" style="margin-right: 10px;">New Request Time-Off</a>
           </nav>
         
           <div class="container" style="margin-top: 10px; overflow-y: auto;">       
@@ -72,13 +73,30 @@
                       <h6 class="card-subtitle mb-2 text-body-secondary">Position: {{employee.position}} </h6>
                       <hr>
                       <p class="card-text"> <b>Email:</b> {{employee.email}}</p>
-                      <p class="card-text"> <b>Department:</b> {{employee.department}}</p>
-                      <p class="card-text"> <b>Contract Type:</b> {{employee.contract_type}}</p>
-                      <p class="card-text"> <b>Salary:</b> {{employee.salary}}</p>
-                      <p class="card-text"> <b>Adress:</b> <br> {{employee.address}}</p>
+                      <p class="card-text"> <b>Hire Date:</b> {{employee.hire_date}}</p>
+                      <p class="card-text"> <b>Absence remain:</b> {{employee.absence}}</p>
                       <hr>
                     </div>
                   </div>
+          </div>
+        </div>
+        <div class="container" style="margin-top: 10px; overflow-y: auto;">
+          <div class="row row-cols-4">
+              {% for leave_request in leave_requests  %}
+            <div class="col">
+      
+              <div class="card" style="width: 18rem;">
+                  <div class="card-body">
+                    <h5 class="card-title"> {{employee.name}} </h5>
+                    <h6 class="card-subtitle mb-2 text-body-secondary">Reason: {{leave_request.reason}} </h6>
+                    <p class="card-text"> <b>Start Date:</b> {{leave_request.start_date}}</p>
+                    <p class="card-text"> <b>End Date:</b> {{leave_request.end_date}}</p>
+                    <p class="card-text"> <b>Status:</b> {{leave_request.status}}</p>
+                  </div>
+                </div>
+      
+            </div>
+              {% endfor %}
           </div>
         </div>
 </body>
