--- a/hr_app_project/hr_app/templates/manageemployee.html
+++ b/hr_app_project/hr_app/templates/manageemployee.html
@@ -6,7 +6,7 @@
 <nav class=" nav nav-pills navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark" style="color: azure;
 padding: 10px;">
     <a href="{% url 'hr_app:manageemployee' %}" class="nav-link active" aria-current="page"> Manage Employee</a>
-    <a href="" class="nav-link"> Request Time Off</a>  
+    <a href="{% url 'hr_app:timeoffadmin' %}" class="nav-link"> Request Time Off</a>  
   </nav>
 
   <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark" style="padding: 10px; color: azure;">
