--- a/hr_app_project/hr_app/templates/homeemployee.html
+++ b/hr_app_project/hr_app/templates/homeemployee.html
@@ -66,7 +66,7 @@
           </nav>
         
           <div class="container" style="margin-top: 10px; overflow-y: auto;">       
-                <div class="card">
+                <div class="card text-bg-dark border-secondary">
                     <div class="card-body">
                       <h5 class="card-title"> {{employee.name}} </h5>
                       <h6 class="card-subtitle mb-2 text-body-secondary">Position: {{employee.position}} </h6>
