--- a/hr_app_project/hr_app/templates/payrollemployee.html
+++ b/hr_app_project/hr_app/templates/payrollemployee.html
@@ -63,7 +63,7 @@ padding: 10px;">
   </nav>
 
   <div class="container" style="margin-top: 10px; overflow-y: auto;">
-    <div class="accordion-dark" id="accordionExample" style="color: azure;">
+    <div class="accordion-dark" id="accordionExample" style="color: azure; border-radius: 10px;">
      
           <div class="accordion-dark-item">
             <h2 class="accordion-header-dark">
@@ -74,7 +74,7 @@ padding: 10px;">
             </h2>
             <div id="collapse{{employee.id}}" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
               <div class="accordion-body">
-                <table class="table">
+                <table class="table table-dark table-striped" style="border-radius: 10px;">
                   <thead>
                     <tr>
                       <th scope="col"> Month</th>
@@ -87,7 +87,13 @@ padding: 10px;">
                           <tr>
                               <td> {{salary.month}} </td>
                               <td> {{employee.salary}} </td>
-                              <td> {{salary.status}} </td>
+                              {%if salary.status == "Paid"%}
+                              <td class="table-success"> {{salary.status}} </td>
+                              {% elif salary.status == "Overdue" %}
+                              <td class="table-danger"> {{salary.status}} </td>
+                              {% else %}
+                              <td class="table-warning"> {{salary.status}} </td>
+                              {% endif %}
                           </tr>
                         {% endfor %}
                   </tbody>
