--- a/hr_app_project/hr_app/templates/timeoffemployee.html
+++ b/hr_app_project/hr_app/templates/timeoffemployee.html
@@ -62,15 +62,15 @@
           </nav>
         
           <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark" style="padding: 10px; color: azure;">
-            <h1 style="margin-right: auto;"> Welcome {{employee.name}} </h1>
+            <h2 style="margin-right: auto;"> Request Time Off </h2>
             <a class="btn btn-primary" href="{% url 'hr_app:add_leave_request' %}" role="button" style="margin-right: 10px;">New Request Time-Off</a>
           </nav>
-        
-          <div class="container" style="margin-top: 10px; overflow-y: auto;">       
-                <div class="card">
+        <hr>
+          <div class="container" style="margin: 10px; overflow-y: auto; width: 50%;">       
+                <div class="card text-bg-dark border-secondary">
                     <div class="card-body">
                       <h5 class="card-title"> {{employee.name}} </h5>
-                      <h6 class="card-subtitle mb-2 text-body-secondary">Position: {{employee.position}} </h6>
+                      <h6 class="card-subtitle mb-2 text-primary">Position: {{employee.position}} </h6>
                       <hr>
                       <p class="card-text"> <b>Email:</b> {{employee.email}}</p>
                       <p class="card-text"> <b>Hire Date:</b> {{employee.hire_date}}</p>
@@ -79,25 +79,51 @@
                     </div>
                   </div>
           </div>
-        </div>
-        <div class="container" style="margin-top: 10px; overflow-y: auto;">
-          <div class="row row-cols-4">
-              {% for leave_request in leave_requests  %}
-            <div class="col">
-      
-              <div class="card" style="width: 18rem;">
-                  <div class="card-body">
-                    <h5 class="card-title"> {{employee.name}} </h5>
-                    <h6 class="card-subtitle mb-2 text-body-secondary">Reason: {{leave_request.reason}} </h6>
-                    <p class="card-text"> <b>Start Date:</b> {{leave_request.start_date}}</p>
-                    <p class="card-text"> <b>End Date:</b> {{leave_request.end_date}}</p>
-                    <p class="card-text"> <b>Status:</b> {{leave_request.status}}</p>
+          <hr>
+          <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark" style="padding: 10px; color: azure;">
+            <h5 style="margin-right: auto;"> Request </h5>
+          </nav>
+          <hr>
+          <div class="container" style="margin: 10px; overflow-y: auto;">
+            <div class="row row-cols-4">
+                {% for leave_request in leave_requests  %}
+              <div class="col">
+                {% if leave_request.status == "Approved" %}
+                <div class="card text-bg-success" style="width: 18rem;">
+                    <div class="card-body">
+                      <h5 class="card-title"> {{employee.name}} </h5>
+                      <h6 class="card-subtitle mb-2 text-body-secondary">Reason: {{leave_request.reason}} </h6>
+                      <p class="card-text"> <b>Start Date:</b> {{leave_request.start_date}}</p>
+                      <p class="card-text"> <b>End Date:</b> {{leave_request.end_date}}</p>
+                      <p class="card-text"> <b>Status:</b> {{leave_request.status}}</p>
+                    </div>
                   </div>
-                </div>
-      
+                  {% elif leave_request.status == "Rejected"%}
+                  <div class="card text-bg-danger" style="width: 18rem;">
+                    <div class="card-body">
+                      <h5 class="card-title"> {{employee.name}} </h5>
+                      <h6 class="card-subtitle mb-2 text-body-secondary">Reason: {{leave_request.reason}} </h6>
+                      <p class="card-text"> <b>Start Date:</b> {{leave_request.start_date}}</p>
+                      <p class="card-text"> <b>End Date:</b> {{leave_request.end_date}}</p>
+                      <p class="card-text"> <b>Status:</b> {{leave_request.status}}</p>
+                    </div>
+                  </div>
+                  {% else %}
+                  <div class="card text-bg-warning" style="width: 18rem;">
+                    <div class="card-body">
+                      <h5 class="card-title"> {{employee.name}} </h5>
+                      <h6 class="card-subtitle mb-2 text-body-secondary">Reason: {{leave_request.reason}} </h6>
+                      <p class="card-text"> <b>Start Date:</b> {{leave_request.start_date}}</p>
+                      <p class="card-text"> <b>End Date:</b> {{leave_request.end_date}}</p>
+                      <p class="card-text"> <b>Status:</b> {{leave_request.status}}</p>
+                    </div>
+                  </div>
+                {% endif %}
+              </div>
+                {% endfor %}
             </div>
-              {% endfor %}
           </div>
         </div>
+
 </body>
 </html>
